--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "babel-preset-es2015": "^6.16.0",
     "babel-register": "^6.16.3",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "pug": "^2.0.0-beta6"
   },
