--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "firebase": "^3.6.1",
     "pug": "^2.0.0-beta6"
   },
   "devDependencies": {},
